--- a/app/templates/components/_data_table_header.html
+++ b/app/templates/components/_data_table_header.html
@@ -7,7 +7,7 @@
         <div class="py-5 bg-white dark:bg-gray-800">
             {% if (active_tab == 'categories')%}
                 {% include 'components/_default_search_input.html' %}
-            {% else %}
+            {% elif (active_tab == 'goods') %}
                 {% include 'components/_search_input_with_filter.html' %}
             {% endif %}
         </div>
@@ -17,7 +17,7 @@
                 :id="activeTab === 'categories' ? 'addCategory' : 'addProduct'"
                 @click="createRowForm()"
                 :disabled="tableState != GlobalStates.NONE"
-                class="text-white w-3/4 h-1/3 bg-cyan-600 hover:bg-sky-600 
+                class="text-white w-3/4 h-1/3 min-h-16 bg-cyan-600 hover:bg-sky-600 
                 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm 
                 px-5 py-2.5 me-2 mb-4 dark:bg-cyan-800 dark:hover:bg-cyan-900 
                 focus:outline-none dark:focus:ring-cyan-950 disabled:opacity-50 disabled:cursor-not-allowed"
@@ -29,7 +29,7 @@
                 :id="activeTab === 'categories' ? 'removeCategory' : 'removeProduct'"
                 @click="$store.tableState.startSelecting()"
                 :disabled="tableState != GlobalStates.NONE"
-                class=" w-3/4 h-1/3 py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
+                class=" w-3/4 h-1/3 min-h-16 py-2.5 px-5 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border
                 border-gray-200 hover:bg-gray-100 hover:text-cyan-700 focus:z-10 focus:ring-4 focus:ring-gray-100 
                 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white
                 dark:hover:bg-gray-700 disabled:opacity-50 disabled:cursor-not-allowed"
