--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -48,7 +48,9 @@
     <script type="module" src="{{ url_for('static', filename='js/createRow.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableInteractions.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='js/tableState.js') }}"></script>
-    <script type="module" src="{{ url_for('static', filename='js/SearchWithFilter.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/searchWithFilter.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='js/defaultSearch.js') }}"></script>
+
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
 
