--- a/app/templates/components/_header.html
+++ b/app/templates/components/_header.html
@@ -1,4 +1,4 @@
-<nav x-data="navbar({{user}})" class="sticky top-0 z-50 border-gray-200 bg-gray-100 dark:bg-gray-600 transition-transform duration-300">
+<nav x-data="navbar({{session['user']}})" class="sticky top-0 z-50 border-gray-200 bg-gray-100 dark:bg-gray-600 transition-transform duration-300">
   <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4">
     <div class="flex items-center gap-20">
       <a href="{{ url_for('main.home') }}" class="flex items-center space-x-5 rtl:space-x-reverse">
