--- a/app/templates/components/_login_form.html
+++ b/app/templates/components/_login_form.html
@@ -1,36 +1,36 @@
-<div class="flex flex-col my-auto px-6 py-20 lg:px-8">
+<div x-data="loginForm()" class="flex flex-col my-auto px-6 py-20 lg:px-8">
   <div class="sm:mx-auto w-3xl sm:w-full sm:max-w-sm">
     <img class="mx-auto h-16 w-auto" src="https://i.ibb.co/F6MdYJp/zlagoda-logo.png" alt="Your Company">
     <h2 class="mt-10 text-center text-4xl font-bold leading-9 tracking-tight text-gray-900 dark:text-gray-300">Log in to your account</h2>
   </div>
 
   <div class="mt-10 sm:mx-auto w-3xl sm:w-full sm:max-w-sm">
-    <form class="space-y-6" action="#" method="POST" x-data="{ email: '', password: '' }">
+    <form class="space-y-6">
       <div>
-        <label for="email" class="block text-lg font-medium leading-6 text-gray-900 dark:text-gray-300">Email address</label>
+        <label class="block text-lg font-medium leading-6 text-gray-900 dark:text-gray-300">Login</label>
         <div class="mt-2">
-          <input id="email" name="email" type="email" autocomplete="email" x-model="email" required class="block w-full rounded-md border-0 text-xl 
-          py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 dark:text-gray-200
+          <input id="login" autocomplete="login" required class="block w-full rounded-md border-0 text-xl 
+          px-3 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 dark:text-gray-200
           focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6 dark:bg-gray-700 dark:border-gray-600 dark:ring-gray-500">
         </div>
       </div>
 
       <div>
         <div class="flex items-center justify-between">
-          <label for="password" class="block text-lg font-medium leading-6 text-gray-900 dark:text-gray-300">Password</label>
+          <label class="block text-lg font-medium leading-6 text-gray-900 dark:text-gray-300">Password</label>
           <div class="text-sm">
             <a href="#" class="font-semibold text-cyan-600 hover:text-sky-600">Forgot password?</a>
           </div>
         </div>
         <div class="mt-2">
-          <input id="password" name="password" type="password" autocomplete="current-password" x-model="password" required class="block w-full rounded-md 
-          border-0 text-xl py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 
+          <input id="password" type="password" required class="block w-full rounded-md 
+          border-0 text-xl px-3 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 
           focus:ring-2 focus:ring-inset focus:ring-cyan-600 sm:text-sm sm:leading-6 dark:bg-gray-700 dark:border-gray-600 dark:ring-gray-500 dark:text-gray-200">
         </div>
       </div>
 
       <div>
-        <button type="LogIn" :disabled="email === '' || password === ''" class="flex w-full h-12 justify-center items-center rounded-md  px-3 py-1.5 
+        <button type="LogIn" @click.prevent="loginRequest()" :disabled="login === '' || password === ''" class="flex w-full h-12 justify-center items-center rounded-md  px-3 py-1.5 
         text-xl font-semibold text-white shadow-sm bg-cyan-600 hover:bg-sky-600 disabled:opacity-50
         focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2
         focus-visible:outline-sky-400 dark:bg-cyan-800 dark:hover:bg-cyan-900 
